<resources>
    <string name="app_name">Pay on time</string>
    <string name="app_name_space">" Pay on time"</string>
    <string name="action_settings">Settings</string>
    <string name="invoice">Payment</string>
    <string name="invoice_space"> Payment</string>
    <string name="periodic_invoice_space"> Add recurring</string>
    <string name="pref_show_paid_label">Show paid</string>
    <string name="date_label">Invoice date</string>
    <string name="date_label_from">Date from</string>
    <string name="date_label_to">Date to</string>
    <string name="desciption_label">Payment desciption</string>
    <string name="amount_label">Payment amount</string>
    <string name="currency_label">Currency</string>
    <string name="default_currency">EUR</string>
    <string name="paid_label">Paid</string>
    <string name="pref_show_paid_key" translatable="false">show_paid</string>
    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="newInvoiceError">Please provide correct data</string>
    <string name="invoiceAmountError">Amount not valid</string>
    <string name="dateFormat">MM/dd/yyyy</string>
    <string name="newDateError">Date not valid</string>
    <string name="show_history">Show history</string>
    <string name="pref_show_history_key" translatable="false">show_history</string>
    <string name="pref_show_notification_key" translatable="false">show_notification</string>
    <string name="pref_notification_time_key" translatable="false">notification_time</string>
    <string name="pref_show_history_label">Show history</string>
    <string name="pref_show_notification_label">Show notifications</string>
    <string name="pref_notification_time_label">Notification time</string>
    <string name="not_paid_label">Not paid</string>
    <string name="reminder_notification_title">Pay on time</string>
    <string name="reminder_notification_body">An invoice to be paid:</string>
    <string name="main_notification_channel_name" translatable="false">Primary</string>
    <string name="action_pay">Mark as paid</string>
    <string name="action_cancel">Cancel</string>
    <string name="pref_days_before_notification_label">Days before notification</string>
    <string name="pref_days_before_notification_key" translatable="false">days_before_notification</string>
    <string name="no_invoices">No payments</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="payment_frequency">Payment every:</string>
    <string name="dates_error">\'Date to\' must be after \'Date from\'</string>
    <string name="periodic_limit_warning">the recurring payment limit has been reached</string>
</resources>
